Add system alter endpoint
