# apps/docs/src/lib/openapi.ts
@@ -1,19 +1,23 @@
-import { createOpenAPI } from 'fumadocs-openapi/server';
+import { createOpenAPI } from "fumadocs-openapi/server";
 
 const baseUrl =
-	process.env.NEXT_PUBLIC_SITE_URL ??
-	(process.env.BETTER_AUTH_URL ? process.env.BETTER_AUTH_URL : undefined) ??
-	(process.env.NODE_ENV === 'development' ? 'http://localhost:3000' : undefined);
+	process.env.NEXT_PUBLIC_VERCEL_ENV !== undefined
+		? process.env.BETTER_AUTH_URL
+			? process.env.BETTER_AUTH_URL
+			: undefined
+		: process.env.NODE_ENV === "development"
+			? "http://localhost:3000"
+			: undefined;
 
 const schemaPath = baseUrl
 	? `${baseUrl}/openapi.yml`
-	: process.cwd().includes('/apps/docs')
-		? './public/openapi.yml'
-		: './apps/docs/public/openapi.yml';
+	: process.cwd().includes("/apps/docs")
+		? "./public/openapi.yml"
+		: "./apps/docs/public/openapi.yml";
 
 export const openapi = createOpenAPI({
-  // the OpenAPI schema, you can also give it an external URL.
-  input: async () => ({
-    './public/openapi.yml': schemaPath,
-  }),
+	// the OpenAPI schema, you can also give it an external URL.
+	input: async () => ({
+		"./public/openapi.yml": schemaPath,
+	}),
 });
